test/expect/cmd.gccxml-and-E.stderr.txt
^error: '--castxml-gccxml' and '-E' may not both be given

Usage: castxml .*$
